[gd_scene load_steps=18 format=3 uid="uid://dqplcr2qw6pkg"]

[ext_resource type="Script" path="res://scenes/characters/brevi.gd" id="1_ck1ir"]
[ext_resource type="Texture2D" uid="uid://v1j3ag6pemrp" path="res://assets/player_spritesheet.png" id="2_qpk83"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_vx7m2"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_buy86"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_n51ju"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_ehpj2"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="7_w7wtl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjkkk"]
size = Vector2(14, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3uoab"]
size = Vector2(21, 12)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvaw6"]
bg_color = Color(0.741176, 0.341176, 0.0392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0784314, 0.105882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l2v6"]
bg_color = Color(1, 0.85098, 0.258824, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0901961, 0.0784314, 0.105882, 1)

[sub_resource type="Animation" id="Animation_413s7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreviSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q4ap7"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreviSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_jnirg"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreviSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kn01f"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreviSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_shvq4"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BreviSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k8m45"]
_data = {
"RESET": SubResource("Animation_413s7"),
"fall": SubResource("Animation_q4ap7"),
"idle": SubResource("Animation_jnirg"),
"jump": SubResource("Animation_kn01f"),
"run": SubResource("Animation_shvq4")
}

[node name="Brevi" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ck1ir")

[node name="BreviSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_qpk83")
offset = Vector2(0, -12)
hframes = 15
region_rect = Rect2(576, 0, 64, 64)

[node name="VerticalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_yjkkk")

[node name="HorizontalCollision" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -9)
shape = SubResource("RectangleShape2D_3uoab")
disabled = true

[node name="SquashTimer" type="Timer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="GlideStaminaBar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -21.0
offset_right = -17.0
offset_bottom = -4.0
theme_override_constants/outline_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_pvaw6")
theme_override_styles/fill = SubResource("StyleBoxFlat_0l2v6")
max_value = 1.0
step = 0.001
value = 1.0
fill_mode = 3
show_percentage = false

[node name="BreviAnims" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k8m45")
}
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 2.0

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_vx7m2")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_buy86")
initial_state = NodePath("Ground")

[node name="Ground" type="Node" parent="StateChart/Root"]
script = ExtResource("4_buy86")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Ground"]
script = ExtResource("5_n51ju")

[node name="ToRun" type="Node" parent="StateChart/Root/Ground/Idle"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Run")
event = &"run"

[node name="Run" type="Node" parent="StateChart/Root/Ground"]
script = ExtResource("5_n51ju")

[node name="ToIdle" type="Node" parent="StateChart/Root/Ground/Run"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Idle")
event = &"run_stop"

[node name="Duck" type="Node" parent="StateChart/Root/Ground"]
script = ExtResource("5_n51ju")

[node name="GroundSlide" type="Node" parent="StateChart/Root/Ground"]
script = ExtResource("5_n51ju")

[node name="ToCoyote" type="Node" parent="StateChart/Root/Ground"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Air")
event = &"is_in_air"

[node name="ToAirborne" type="Node" parent="StateChart/Root/Ground"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Air/Airborne")
event = &"jump"

[node name="Air" type="Node" parent="StateChart/Root"]
script = ExtResource("4_buy86")
initial_state = NodePath("Coyote")

[node name="Coyote" type="Node" parent="StateChart/Root/Air"]
script = ExtResource("5_n51ju")

[node name="ToAirborne" type="Node" parent="StateChart/Root/Air/Coyote"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Airborne")
event = &"coyote_time_end"

[node name="Airborne" type="Node" parent="StateChart/Root/Air"]
script = ExtResource("5_n51ju")

[node name="Glide" type="Node" parent="StateChart/Root/Air"]
script = ExtResource("5_n51ju")

[node name="ToGround" type="Node" parent="StateChart/Root/Air"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Ground")
event = &"collide_floor"

[node name="ToWall" type="Node" parent="StateChart/Root/Air"]
script = ExtResource("6_ehpj2")
to = NodePath("../../Wall")
event = &"collide_wall"

[node name="Wall" type="Node" parent="StateChart/Root"]
script = ExtResource("4_buy86")
initial_state = NodePath("Cling")

[node name="Cling" type="Node" parent="StateChart/Root/Wall"]
script = ExtResource("5_n51ju")

[node name="Climb" type="Node" parent="StateChart/Root/Wall"]
script = ExtResource("5_n51ju")

[node name="Slide" type="Node" parent="StateChart/Root/Wall"]
script = ExtResource("5_n51ju")

[node name="StateChartDebugger" parent="." instance=ExtResource("7_w7wtl")]
offset_left = -200.0
offset_top = -227.0
offset_right = 221.0
offset_bottom = -46.0
initial_node_to_watch = NodePath("..")

[connection signal="timeout" from="SquashTimer" to="." method="_on_squash_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="state_entered" from="StateChart/Root/Ground" to="." method="_on_ground_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Ground" to="." method="_on_ground_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Ground/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Ground/Run" to="." method="_on_run_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Air" to="." method="_on_air_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Air" to="." method="_on_air_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Air/Airborne" to="." method="_on_airborne_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Wall" to="." method="_on_wall_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Wall" to="." method="_on_wall_state_physics_processing"]
